fix: the align-center property of Modal not work

--- a/packages/web-vue/components/message/style/index.less
+++ b/packages/web-vue/components/message/style/index.less
@@ -55,6 +55,7 @@
   }
 
   &-content {
+    font-size: @message-font-size-content;
     color: @message-normal-color-content;
     vertical-align: middle;
   }
